Fixed elements overlapping

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,6 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: #272727;
     text-align: center;
 }
@@ -56,8 +55,8 @@ h1 {
 }
 
 .headerStuff {
-    margin-bottom: auto;
-    margin-top: 15px;
+    margin-top: 5%;
+    margin-bottom: 2.5%;
     color: white;
     -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 2s; /* Firefox < 16 */
